--- a/SP23.P03.Web/ClientApp/public/index.html
+++ b/SP23.P03.Web/ClientApp/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="train.svg"/>
     <!--Nunito Sans--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>EnTrack</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
